--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ REACT_URL=http://localhost:3000
 
 DB_NAME = HTS_Tony
 DB_HOST = citizen.manukautech.info
-DB_POST = 6306
+DB_PORT = 6306
 DB_DIALECT = mssql
 DB_USER = Tony
 DB_PASSWORD = T0nyP@ssw0rd!
